[LFC][IFC] Non-content runs (e.g. inline box start/end) do not need "within the line" flip https://bugs.webkit.org/show_bug.cgi?id=236426

Reviewed by Antti Koivisto.

This is the same what we already do for the bidi case.

* layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processNonBidiContent):



Canonical link: https://commits.webkit.org/247113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289600 268f45cc-cd09-0410-ab3c-d52691b4dbfc